fix : fixed scrollbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,10 @@ body {
   overflow-x: hidden;
 }
 
+body::-webkit-scrollbar {
+  display: none;
+}
+
 strong,
 h1,
 h2 {
